# rich-text-editor

./: .gitignore  Cargo.toml  flake.nix
src/: app.rs  camera.rs  constants.rs  context.rs  event.rs  file_macros.rs  instance.rs  macros.rs  main.rs  shader.wgsl  shader_model.rs  state.rs  texture.rs  theme.rs
src/components/: button.rs  child.rs  mod.rs  root.rs
src/rectangle/: batch.rs  instance.rs  shader.wgsl
src/renderer/: draw_manager.rs  helper.rs  mod.rs  painter.rs  split.rs  texture_manager.rs
src/renderer/glyph/: batch.rs  instance.rs  mod.rs  shader.wgsl  vertex.rs
src/renderer/image/: batch.rs  instance.rs  shader.wgsl  vertex.rs
src/renderer/rectangle/: batch.rs  instance.rs  shader.wgsl  vertex.rs
src/renderer/text/: mod.rs  text_manager.rs
