[package]
name = "rich-text-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.13"
anyhow = "1.0"
pollster = "0.4.0"
env_logger = "0.10"
wgpu = "29.0"
log = "0.4"
bytemuck = { version = "1.24", features = [ "derive" ] }
glam = { version = "0.32", features = ["bytemuck"] }
slotmap = "1.1"
guillotiere = "0.7.0"
cosmic-text = "0.19.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.image]
version = "0.24"
features = ["jpeg_rayon"]
